cmake_minimum_required(VERSION 2.8)
project( VideoFromStream )
find_package( OpenCV REQUIRED )
find_package(PkgConfig)
find_package (Threads)
pkg_check_modules(TANGO tango>=7.2.6 REQUIRED)
pkg_check_modules(CURLPP REQUIRED curlpp)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${TANGO_INCLUDE_DIRS} )
include_directories( ${CURLPP_INCLUDE_DIRS} )
add_definitions( "-std=c++11" )
add_executable( VideoFromStream VideoFromStream.cpp )
target_link_libraries( VideoFromStream ${TANGO_LIBRARIES} )
target_link_libraries( VideoFromStream ${OpenCV_LIBS} )
target_link_libraries( VideoFromStream ${CURLPP_LDFLAGS})
target_link_libraries (VideoFromStream ${CMAKE_THREAD_LIBS_INIT})
