cmake_minimum_required(VERSION 2.8)
project( Stitching )
find_package( OpenCV REQUIRED )
find_package(PkgConfig)
find_package (Threads)
find_package(Boost COMPONENTS thread system REQUIRED)
pkg_check_modules(TANGO tango>=7.2.6 REQUIRED)
pkg_check_modules(CURLPP REQUIRED curlpp)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${TANGO_INCLUDE_DIRS} )
include_directories( ${CURLPP_INCLUDE_DIRS} )
add_definitions( "-std=c++11" )
add_executable( Stitching Stitching.cpp )
target_link_libraries( Stitching ${TANGO_LIBRARIES} )
target_link_libraries( Stitching ${OpenCV_LIBS} )
target_link_libraries( Stitching ${CURLPP_LDFLAGS})
target_link_libraries (Stitching ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Stitching ${Boost_LIBRARIES})